Bridge implementation unit tests mdSchemaDimensions, mdSchemaFunctions, mdSchemaHierarchies Signed-off-by: dbulahov <bulahovdenis@gmail.com>