@@ -45,7 +45,7 @@ import org.eclipse.daanse.xmla.api.common.enums.CubeTypeEnum;
 import org.eclipse.daanse.xmla.api.common.enums.DimensionCardinalityEnum;
 import org.eclipse.daanse.xmla.api.common.enums.DimensionTypeEnum;
 import org.eclipse.daanse.xmla.api.common.enums.DimensionUniqueSettingEnum;
-import org.eclipse.daanse.xmla.api.common.enums.DirectQueryPushableEnum;
+import org.eclipse.daanse.xmla.api.common.enums.HierarchyOriginEnum;
 import org.eclipse.daanse.xmla.api.common.enums.InterfaceNameEnum;
 import org.eclipse.daanse.xmla.api.common.enums.LevelDbTypeEnum;
 import org.eclipse.daanse.xmla.api.common.enums.LevelTypeEnum;
@@ -58,6 +58,7 @@ import org.eclipse.daanse.xmla.api.common.enums.PropertyOriginEnum;
 import org.eclipse.daanse.xmla.api.common.enums.PropertyTypeEnum;
 import org.eclipse.daanse.xmla.api.common.enums.ScopeEnum;
 import org.eclipse.daanse.xmla.api.common.enums.SetEvaluationContextEnum;
+import org.eclipse.daanse.xmla.api.common.enums.StructureEnum;
 import org.eclipse.daanse.xmla.api.common.enums.TableTypeEnum;
 import org.eclipse.daanse.xmla.api.common.enums.TreeOpEnum;
 import org.eclipse.daanse.xmla.api.common.enums.VisibilityEnum;
@@ -86,6 +87,7 @@ import org.eclipse.daanse.xmla.model.record.discover.dbschema.tablesinfo.DbSchem
 import org.eclipse.daanse.xmla.model.record.discover.mdschema.cubes.MdSchemaCubesResponseRowR;
 import org.eclipse.daanse.xmla.model.record.discover.mdschema.demensions.MdSchemaDimensionsResponseRowR;
 import org.eclipse.daanse.xmla.model.record.discover.mdschema.functions.MdSchemaFunctionsResponseRowR;
+import org.eclipse.daanse.xmla.model.record.discover.mdschema.hierarchies.MdSchemaHierarchiesResponseRowR;
 import org.eclipse.daanse.xmla.model.record.discover.mdschema.levels.MdSchemaLevelsResponseRowR;
 import org.eclipse.daanse.xmla.model.record.discover.mdschema.measuregroupdimensions.MdSchemaMeasureGroupDimensionsResponseRowR;
 import org.eclipse.daanse.xmla.model.record.discover.mdschema.measuregroups.MdSchemaMeasureGroupsResponseRowR;
@@ -561,7 +563,7 @@ public class Utils {
         return getDatabaseMappingSchemaProviderWithFilter(context.getDatabaseMappingSchemaProviders(), oTableSchema)
             .stream().filter(dmsp -> dmsp != null && dmsp.get() != null)
             .map(dmsp -> getDbSchemaTablesResponseRow(context.getName(), dmsp.get(), oTableName, oTableType))
-            .flatMap(Collection::stream).toList();        
+            .flatMap(Collection::stream).toList();
     }
 
     private static List<DbSchemaTablesResponseRow> getDbSchemaTablesResponseRow(
@@ -1371,10 +1373,12 @@ public class Utils {
                 schemaName,
                 cubeName,
                 dimension,
+                0,
                 Optional.empty(),
                 Optional.empty(),
                 Optional.empty(),
-                Optional.empty()
+                Optional.empty(),
+                deep
             );
         }
 
@@ -1507,7 +1511,7 @@ public class Utils {
     ) {
         List<Hierarchy> hierarchies = dimension.getHierarchies() == null ? List.of() :
             Arrays.asList(dimension.getHierarchies());
-        return getHierarchiesWithFilter1(hierarchies, oHierarchyUniqueName)
+        return getHierarchiesWithFilterByUniqueName(hierarchies, oHierarchyUniqueName)
             .stream().map(h -> getMdSchemaLevelsResponseRow(
                 catalogName,
                 schemaName,
@@ -1519,12 +1523,12 @@ public class Utils {
                 oLevelVisibility)).flatMap(Collection::stream).toList();
     }
 
-    private static List<Hierarchy> getHierarchiesWithFilter1(
+    private static List<Hierarchy> getHierarchiesWithFilterByName(
         List<Hierarchy> hierarchies,
-        Optional<String> oHierarchyUniqueName
+        Optional<String> oHierarchyName
     ) {
-        if (oHierarchyUniqueName.isPresent()) {
-            hierarchies.stream().filter(h -> oHierarchyUniqueName.get().equals(h.getUniqueName())).toList();
+        if (oHierarchyName.isPresent()) {
+            hierarchies.stream().filter(h -> oHierarchyName.get().equals(h.getName())).toList();
         }
         return hierarchies;
     }
@@ -1761,7 +1765,8 @@ public class Utils {
         Optional<String> oHierarchyName,
         Optional<String> oHierarchyUniqueName,
         Optional<VisibilityEnum> oHierarchyVisibility,
-        Optional<Integer> oHierarchyOrigin
+        Optional<Integer> oHierarchyOrigin,
+        Optional<Boolean> deep
     ) {
         return getSchemasWithFilter(context.getConnection().getSchemas(), oSchemaName)
             .stream().map(s -> getMdSchemaHierarchiesResponseRow(
@@ -1773,7 +1778,8 @@ public class Utils {
                 oHierarchyName,
                 oHierarchyUniqueName,
                 oHierarchyVisibility,
-                oHierarchyOrigin
+                oHierarchyOrigin,
+                deep
             )).flatMap(Collection::stream).toList();
     }
 
@@ -1786,7 +1792,8 @@ public class Utils {
         Optional<String> oHierarchyName,
         Optional<String> oHierarchyUniqueName,
         Optional<VisibilityEnum> oHierarchyVisibility,
-        Optional<Integer> oHierarchyOrigin
+        Optional<Integer> oHierarchyOrigin,
+        Optional<Boolean> deep
     ) {
         List<Cube> cubes = s.getCubes() == null ? List.of() : Arrays.asList(s.getCubes());
         return getCubesWithFilter(cubes, oCubeName).stream()
@@ -1798,7 +1805,8 @@ public class Utils {
                 oHierarchyName,
                 oHierarchyUniqueName,
                 oHierarchyVisibility,
-                oHierarchyOrigin
+                oHierarchyOrigin,
+                deep
             )).flatMap(Collection::stream).toList();
     }
 
@@ -1810,35 +1818,158 @@ public class Utils {
         Optional<String> oHierarchyName,
         Optional<String> oHierarchyUniqueName,
         Optional<VisibilityEnum> oHierarchyVisibility,
-        Optional<Integer> oHierarchyOrigin
+        Optional<Integer> oHierarchyOrigin,
+        Optional<Boolean> deep
     ) {
+        List<MdSchemaHierarchiesResponseRow> result = new ArrayList<>();
         List<Dimension> dimensions = c.getDimensions() == null ? List.of() : Arrays.asList(c.getDimensions());
-        return getDimensionsWithFilterByUniqueName(dimensions, oDimensionUniqueName)
-            .stream()
-            .map(d -> getMdSchemaHierarchiesResponseRow(
-                catalogName,
-                schemaName,
-                c.getName(),
-                d,
-                oHierarchyName,
-                oHierarchyUniqueName,
-                oHierarchyVisibility,
-                oHierarchyOrigin
-            )).flatMap(Collection::stream).toList();
+        int ordinal = 0;
+        for (Dimension dimension : dimensions) {
+            if (!oDimensionUniqueName.isPresent() || oDimensionUniqueName.get().equals(dimension.getUniqueName())) {
+                result.addAll(getMdSchemaHierarchiesResponseRow(
+                    catalogName,
+                    schemaName,
+                    c.getName(),
+                    dimension,
+                    ordinal,
+                    oHierarchyName,
+                    oHierarchyUniqueName,
+                    oHierarchyVisibility,
+                    oHierarchyOrigin,
+                    deep));
+            }
+            ordinal += dimension.getHierarchies().length;
+        }
+        return result;
     }
 
     private static List<MdSchemaHierarchiesResponseRow> getMdSchemaHierarchiesResponseRow(
         String catalogName,
         String schemaName,
-        String name,
-        Dimension d,
+        String cubeName,
+        Dimension dimension,
+        int  ordinal,
         Optional<String> oHierarchyName,
         Optional<String> oHierarchyUniqueName,
         Optional<VisibilityEnum> oHierarchyVisibility,
-        Optional<Integer> oHierarchyOrigin
+        Optional<Integer> oHierarchyOrigin,
+        Optional<Boolean> deep
     ) {
-        return List.of(); //TODO
+        List<Hierarchy> hierarchies = dimension.getHierarchies() == null ? List.of() : Arrays.asList(dimension.getHierarchies());
+
+        return getHierarchiesWithFilterByName(getHierarchiesWithFilterByUniqueName(hierarchies, oHierarchyName), oHierarchyName)
+            .stream().map(h -> getMdSchemaHierarchiesResponseRow1(
+                catalogName,
+                schemaName,
+                cubeName,
+                dimension,
+                ordinal,
+                h,
+                oHierarchyVisibility,
+                oHierarchyOrigin, deep))
+            .toList();
+
     }
+
+    private static MdSchemaHierarchiesResponseRow getMdSchemaHierarchiesResponseRow1(
+        String catalogName,
+        String schemaName,
+        String cubeName,
+        Dimension dimension,
+        int ordinal,
+        Hierarchy hierarchy,
+        Optional<VisibilityEnum> oHierarchyVisibility,
+        Optional<Integer> oHierarchyOrigin,
+        Optional<Boolean> deep
+    ) {
+        String desc = hierarchy.getDescription();
+        if (desc == null) {
+            desc =
+                cubeName + " Cube - "
+                    + getHierarchyName(hierarchy.getName(), dimension.getName()) + " Hierarchy";
+        }
+
+        //mondrian.olap4j.MondrianOlap4jHierarchy mondrianOlap4jHierarchy =
+        //    (mondrian.olap4j.MondrianOlap4jHierarchy)hierarchy;
+
+        // Bitmask
+        // MD_ORIGIN_USER_DEFINED 0x00000001
+        // MD_ORIGIN_ATTRIBUTE 0x00000002
+        // MD_ORIGIN_KEY_ATTRIBUTE 0x00000004
+        // MD_ORIGIN_INTERNAL 0x00000008
+        int hierarchyOrigin;
+        if(dimension.getUniqueName().equals(org.eclipse.daanse.olap.api.element.Dimension.MEASURES_UNIQUE_NAME)){
+            hierarchyOrigin = 6;
+        }
+        else {
+            hierarchyOrigin = hierarchy.origin() != null ? Integer.parseInt(hierarchy.origin()) : 1;
+        }
+
+
+        //String displayFolder = mondrianOlap4jHierarchy.getDisplayFolder();
+        String displayFolder = hierarchy.getDisplayFolder();
+        if(displayFolder == null) {
+            displayFolder = "";
+        }
+
+        //row.set(ParentChild.name, extra.isHierarchyParentChild(hierarchy));
+        //TODO ParentChild
+        if (deep.isPresent() && deep.get()) {
+            //TODO add MdSchemaLevelsResponse to response
+            getMdSchemaLevelsResponseRow(catalogName,
+                schemaName,
+                cubeName,
+                dimension.getUniqueName(),
+                hierarchy,
+                Optional.empty(),
+                Optional.empty(),
+                Optional.empty()
+            );
+        }
+        return new MdSchemaHierarchiesResponseRowR(
+            Optional.ofNullable(catalogName),
+            Optional.ofNullable(schemaName),
+            Optional.ofNullable(cubeName),
+            Optional.ofNullable(dimension.getUniqueName()),
+            Optional.ofNullable(hierarchy.getName()),
+            Optional.ofNullable(hierarchy.getUniqueName()),
+            Optional.empty(),
+            Optional.ofNullable(hierarchy.getCaption()),
+            Optional.ofNullable(getDimensionType(dimension.getDimensionType())),
+            Optional.of(getHierarchyCardinality(hierarchy)),
+            Optional.ofNullable(hierarchy.getDefaultMember() == null ? null : hierarchy.getDefaultMember().getUniqueName()),
+            Optional.ofNullable(hierarchy.hasAll() ? hierarchy.getRootMembers().get(0).getUniqueName() : null),
+            Optional.ofNullable(desc),
+            Optional.of(StructureEnum.HIERARCHY_FULLY_BALANCED),
+            Optional.of(false),
+            Optional.of(false),
+            // NOTE that SQL Server returns '0' not '1'.
+            Optional.of(DimensionUniqueSettingEnum.MEMBER_KEY),
+            Optional.empty(),
+            Optional.ofNullable(dimension.isVisible()),
+            Optional.of(ordinal),
+            Optional.of(true),
+            Optional.ofNullable(hierarchy.isVisible()),
+            Optional.of(HierarchyOriginEnum.fromValue(String.valueOf(hierarchyOrigin))),
+            Optional.ofNullable(displayFolder),
+            Optional.empty(),
+            Optional.empty(),
+            Optional.empty()
+        );
+
+
+    }
+
+    private static int getHierarchyCardinality(Hierarchy hierarchy) {
+        int cardinality = 0;
+        if (hierarchy.getLevels() != null) {
+        	for (Level level : hierarchy.getLevels()) {
+        		cardinality += level.getCardinality();
+        	}
+        }
+        return cardinality;
+    }
+
 
     static List<MdSchemaMeasureGroupsResponseRow> getMdSchemaMeasureGroupsResponseRow(
         Context context,
@@ -2306,5 +2437,4 @@ public class Utils {
         }
         return measures;
     }
-
 }
